--- a/src/jasa_pengiriman/client/view/CabangView.form
+++ b/src/jasa_pengiriman/client/view/CabangView.form
@@ -72,10 +72,8 @@
                               </Group>
                               <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="alamatTextField" min="-2" pref="219" max="-2" attributes="0"/>
-                                      <Component id="noHpTextField" alignment="0" min="-2" pref="219" max="-2" attributes="0"/>
-                                  </Group>
+                                  <Component id="alamatTextField" min="-2" pref="219" max="-2" attributes="0"/>
+                                  <Component id="noHpTextField" alignment="0" min="-2" pref="219" max="-2" attributes="0"/>
                                   <Component id="namaCabangTextField" min="-2" pref="219" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -161,9 +159,9 @@
                           </Group>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="provinsiComboBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
